<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ann"
        android:enabled="true"
        android:icon="@drawable/magnify"
        android:checked="true"
        android:title="@string/Announcements"
        />
    <item
        android:id="@+id/details"
        android:enabled="true"
        android:checked="false"
        android:icon="@drawable/cog"
        android:title="@string/Details"
        />
    <item
        android:id="@+id/addann"
        android:enabled="true"
        android:checked="false"
        android:icon="@drawable/cog"
        android:title="@string/AddAnn"
        />
    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:checked="false"
        android:icon="@drawable/ic_menu_white_24dp"
        android:title="@string/Menu"
        />
</menu>